codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__remote_image_rows_selected.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│   [Image #1]                                                                                     │"
"│   [Image #2]                                                                                     │"
"│                                                                                                  │"
"│ > describe these                                                                                 │"
"│                                                                                                  │"
"│                                                                                                  │"
"╰──────────────────────────────────────────────────────────────────────────────────────── browser ─╯"
"                                                                                 100% context left  "
